[tool.poetry]
name = "rosrestpy"
version = "0.1.2"
description = "RouterOS v7 REST API python module"
authors = ["hexatester <hexatester@protonmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/hexatester/rosrestpy"
packages = [
    { include = "ros" },
]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^21.4.0"
requests = "^2.28.1"
cattrs = "^22.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.961"
black = "^22.6.0"
types-requests = "^2.28.0"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
